--- a/app/package.json
+++ b/app/package.json
@@ -8,8 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
-    "particlesjs": "^2.2.3",
+    "particles.js": "^2.0.0",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
     "vue": "^2.6.11"
