--- a/app/package.json
+++ b/app/package.json
@@ -13,7 +13,8 @@
     "particles.js": "^2.0.0",
     "sass": "^1.26.11",
     "sass-loader": "^10.0.2",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
